--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
     <script src="https://kit.fontawesome.com/6d7586a781.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
